ACKs section. bib. lots of little changes.

--- a/brun17using.bib
+++ b/brun17using.bib
@@ -30,24 +30,14 @@
   organization = {IEEE},
 }
 
-@Standard{std_ieee802154_2011,
-  title        = {{802.15.4-2011: IEEE Standard for Local and metropolitan area networks. Part 15.4: Low-Rate Wireless Personal Area Networks (LR-WPANs)}},
+@Standard{std_ieee802154_2015,
+  title        = {{802.15.4-2015: IEEE Standard for Local and metropolitan area networks. Part 15.4: Low-Rate Wireless Personal Area Networks (LR-WPANs)}},
   organization = {IEEE},
   institution  = {IEEE},
-  number       = {IEEE Std 802.15.4-2011},
+  number       = {IEEE Std 802.15.4-2015},
   address      = {New York, NY, USA},
-  month        = {5 September},
-  year         = {2011},
-}
-
-@Standard{std_ieee802154e_2012,
-  title        = {{802.15.4e-2012: IEEE Standard for Local and metropolitan area networks--Part 15.4: Low-Rate Wireless Personal Area Networks (LR-WPANs) Amendment 1: MAC sublayer}},
-  organization = {IEEE},
-  institution  = {IEEE},
-  number       = {IEEE Std 802.15.4e-2012},
-  address      = {New York, NY, USA},
-  month        = {16 April},
-  year         = {2012},
+  month        = {April},
+  year         = {2015},
 }
 
 @Manual{smip_app_note,
