fixing bib warnings

--- a/brun17using.bib
+++ b/brun17using.bib
@@ -30,14 +30,15 @@
   organization = {IEEE},
 }
 
-@Standard{std_ieee802154_2015,
+@TechReport{std_ieee802154_2015,
+  author       = {IEEE},
   title        = {{802.15.4-2015: IEEE Standard for Local and metropolitan area networks. Part 15.4: Low-Rate Wireless Personal Area Networks (LR-WPANs)}},
-  organization = {IEEE},
   institution  = {IEEE},
+  year         = {2015},
   number       = {IEEE Std 802.15.4-2015},
   address      = {New York, NY, USA},
   month        = {April},
-  year         = {2015},
+  organization = {IEEE},
 }
 
 @Manual{smip_app_note,
@@ -51,6 +52,7 @@
   title        = {{Industrial IEEE802.15.4e Networks: Performance and Trade-offs}},
   booktitle    = {International Conference on Communications (ICC), Internet of Things Symposium},
   year         = {2015},
+  pages        = {1--6},
   address      = {London, UK},
   month        = {8-12 June},
   organization = {IEEE},
@@ -61,7 +63,6 @@
   publisher = {Wiley-Blackwell},
   year      = {2007},
   author    = {Saunders, Simon R. and Arag\'on-Zavala, Alejandro},
-  editor    = {Saunders, Simon R. and Arag\'on-Zavala, Alejandro},
   edition   = {2nd},
 }
 
@@ -73,14 +74,14 @@
   month  = {13 May},
 }
 
-@Standard{rfc3626,
-  title        = {{Optimized Link State Routing Protocol (OLSR)}},
-  organization = {IETF},
-  institution  = {IETF},
+@TechReport{rfc3626,
   author       = {Clausen, Thomas Heide and Jacquet, Philippe},
+  title        = {{Optimized Link State Routing Protocol (OLSR)}},
+  institution  = {IETF},
+  year         = {2003},
   number       = {RFC3626},
   month        = {October},
-  year         = {2003},
+  organization = {IETF},
 }
 
 @InProceedings{srinivasan08beta,
