Adding reference to previously published paper

--- a/brun17using.bib
+++ b/brun17using.bib
@@ -94,4 +94,15 @@
   organization = {ACM},
 }
 
+@InProceedings{brun16intuitive,
+  author       = {Brun-Laguna, Keoma and Diedrichs, Ana Laura and Dujovne, Diego and L\'eone, R\'emy and Vilajosana, Xavier and Watteyne, Thomas},
+  title        = {{(Not so) Intuitive Results from a Smart Agriculture Low-Power Wireless Mesh Deployment}},
+  booktitle    = {ACM International Conference on Mobile Computing and Networking (MobiCom), Workshop on Challenged Networks (CHANTS)},
+  year         = {2016},
+  pages        = {25--30},
+  address      = {New York, NY, USA},
+  month        = {7 October},
+  organization = {ACM},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
