--- a/brun17using.tex
+++ b/brun17using.tex
@@ -197,6 +197,11 @@ This article makes the following contributions:
     \item We conclude that \smip is a perfectly suitable IoT technology for the \agri and \building domains.
 \end{itemize}
 
+% extension
+
+This article in an extension of a previously published paper~\cite{brun16intuitive}, which only presented results for the \agri deployment, over a 3-week period.
+This article offers analysis over a 3-month period, and contrasts and compares the performance of \smip in the \agri deployment with that in a (new) \building deployment.
+
 % remainder
 
 The remainder of this article is organized as follows.
